CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(boostexample 
  VERSION 2021.10.3
  LANGUAGES C CXX)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_C_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(Threads REQUIRED)

SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost 1.77.0 REQUIRED)

message("## Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
message("## Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}")

ADD_SUBDIRECTORY(sample)
